[gd_scene load_steps=8 format=2]

[ext_resource path="res://TankBattle_Assets/assets/sprite/tilemap.png" type="Texture" id=1]
[ext_resource path="res://player.tscn" type="PackedScene" id=2]
[ext_resource path="res://TileMap.gd" type="Script" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=3]
0/name = "brick"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 256, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "metal"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 288, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "flag"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 192, 128, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "flag_destroyed"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 256, 128, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[node name="TileMap" type="TileMap"]
tile_set = SubResource( 3 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
collision_use_kinematic = true
collision_layer = 4
collision_mask = 7
format = 1
tile_data = PoolIntArray( -1, 1, 0, -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 0, -65531, 1, 0, -65530, 1, 0, -65529, 1, 0, -65528, 1, 0, -65527, 1, 0, -65526, 1, 0, -65525, 1, 0, -65524, 1, 0, -65523, 1, 0, -65522, 1, 0, -65521, 1, 0, -65520, 1, 0, -65519, 1, 0, -65518, 1, 0, -65517, 1, 0, -65516, 1, 0, -65515, 1, 0, -65514, 1, 0, -65513, 1, 0, -65512, 1, 0, -65511, 1, 0, -65510, 1, 0, -65509, 1, 0, -65508, 1, 0, -65507, 1, 0, -65506, 1, 0, 65535, 1, 0, 4, 0, 0, 5, 0, 0, 8, 0, 0, 9, 0, 0, 12, 0, 0, 13, 0, 0, 16, 0, 0, 17, 0, 0, 20, 0, 0, 21, 0, 0, 24, 0, 0, 25, 0, 0, 30, 1, 0, 131071, 1, 0, 65540, 0, 0, 65541, 0, 0, 65544, 0, 0, 65545, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 1, 0, 65551, 1, 0, 65552, 0, 0, 65553, 0, 0, 65556, 0, 0, 65557, 0, 0, 65560, 0, 0, 65561, 0, 0, 65566, 1, 0, 196607, 1, 0, 131076, 0, 0, 131077, 0, 0, 131080, 0, 0, 131081, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 1, 0, 131087, 1, 0, 131088, 0, 0, 131089, 0, 0, 131092, 0, 0, 131093, 0, 0, 131096, 0, 0, 131097, 0, 0, 131102, 1, 0, 262143, 1, 0, 196612, 0, 0, 196613, 0, 0, 196616, 0, 0, 196617, 0, 0, 196620, 0, 0, 196621, 0, 0, 196624, 0, 0, 196625, 0, 0, 196628, 0, 0, 196629, 0, 0, 196632, 0, 0, 196633, 0, 0, 196638, 1, 0, 327679, 1, 0, 262148, 0, 0, 262149, 0, 0, 262152, 0, 0, 262153, 0, 0, 262164, 0, 0, 262165, 0, 0, 262168, 0, 0, 262169, 0, 0, 262174, 1, 0, 393215, 1, 0, 327684, 0, 0, 327685, 0, 0, 327688, 0, 0, 327689, 0, 0, 327700, 0, 0, 327701, 0, 0, 327704, 0, 0, 327705, 0, 0, 327710, 1, 0, 458751, 1, 0, 393228, 0, 0, 393229, 0, 0, 393232, 0, 0, 393233, 0, 0, 393246, 1, 0, 524287, 1, 0, 458764, 0, 0, 458765, 0, 0, 458768, 0, 0, 458769, 0, 0, 458782, 1, 0, 589823, 1, 0, 524288, 0, 0, 524289, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 524316, 0, 0, 524317, 0, 0, 524318, 1, 0, 655359, 1, 0, 589824, 1, 0, 589825, 1, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 589852, 1, 0, 589853, 1, 0, 589854, 1, 0, 720895, 1, 0, 655372, 0, 0, 655373, 0, 0, 655376, 0, 0, 655377, 0, 0, 655390, 1, 0, 786431, 1, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720926, 1, 0, 851967, 1, 0, 786436, 0, 0, 786437, 0, 0, 786440, 0, 0, 786441, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786452, 0, 0, 786453, 0, 0, 786456, 0, 0, 786457, 0, 0, 786462, 1, 0, 917503, 1, 0, 851972, 0, 0, 851973, 0, 0, 851976, 0, 0, 851977, 0, 0, 851980, 0, 0, 851981, 0, 0, 851984, 0, 0, 851985, 0, 0, 851988, 0, 0, 851989, 0, 0, 851992, 0, 0, 851993, 0, 0, 851998, 1, 0, 983039, 1, 0, 917508, 0, 0, 917509, 0, 0, 917512, 0, 0, 917513, 0, 0, 917516, 0, 0, 917517, 0, 0, 917520, 0, 0, 917521, 0, 0, 917524, 0, 0, 917525, 0, 0, 917528, 0, 0, 917529, 0, 0, 917534, 1, 0, 1048575, 1, 0, 983044, 0, 0, 983045, 0, 0, 983048, 0, 0, 983049, 0, 0, 983060, 0, 0, 983061, 0, 0, 983064, 0, 0, 983065, 0, 0, 983070, 1, 0, 1114111, 1, 0, 1048580, 0, 0, 1048581, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048596, 0, 0, 1048597, 0, 0, 1048600, 0, 0, 1048601, 0, 0, 1048606, 1, 0, 1179647, 1, 0, 1114116, 0, 0, 1114117, 0, 0, 1114120, 0, 0, 1114121, 0, 0, 1114125, 0, 0, 1114126, 0, 0, 1114127, 0, 0, 1114128, 0, 0, 1114132, 0, 0, 1114133, 0, 0, 1114136, 0, 0, 1114137, 0, 0, 1114142, 1, 0, 1245183, 1, 0, 1179661, 0, 0, 1179662, 2, 0, 1179664, 0, 0, 1179678, 1, 0, 1310719, 1, 0, 1245197, 0, 0, 1245200, 0, 0, 1245214, 1, 0, 1376255, 1, 0, 1310720, 1, 0, 1310721, 1, 0, 1310722, 1, 0, 1310723, 1, 0, 1310724, 1, 0, 1310725, 1, 0, 1310726, 1, 0, 1310727, 1, 0, 1310728, 1, 0, 1310729, 1, 0, 1310730, 1, 0, 1310731, 1, 0, 1310732, 1, 0, 1310733, 1, 0, 1310734, 1, 0, 1310735, 1, 0, 1310736, 1, 0, 1310737, 1, 0, 1310738, 1, 0, 1310739, 1, 0, 1310740, 1, 0, 1310741, 1, 0, 1310742, 1, 0, 1310743, 1, 0, 1310744, 1, 0, 1310745, 1, 0, 1310746, 1, 0, 1310747, 1, 0, 1310748, 1, 0, 1310749, 1, 0, 1310750, 1, 0 )
script = ExtResource( 3 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 371.946, 579.822 )
speed = 250

[node name="enemy_spawn_timer" type="Timer" parent="."]

[node name="enemy_fire_timer" type="Timer" parent="."]

[node name="spawn_point" type="Position2D" parent="."]
position = Vector2( 479.936, 132.556 )

[node name="spawn_point2" type="Position2D" parent="."]
position = Vector2( 224.076, 33.412 )

[node name="spawn_point3" type="Position2D" parent="."]
position = Vector2( 735.775, 33 )

[node name="HUD" parent="." instance=ExtResource( 4 )]
[connection signal="hit_by" from="player" to="." method="_on_player_hit_by"]
[connection signal="timeout" from="enemy_spawn_timer" to="." method="_on_enemy_spawn_timer_timeout"]
[connection signal="timeout" from="enemy_fire_timer" to="." method="_on_enemy_fire_timer_timeout"]
